[PreMigration][Bugfixes & Features] ExecutionCourseManagement: - New rules: only one ExecutionCourse allowed for each CurricularCourse - Insert Execution Course - Create Course Reports For Execution Period - Create Execution Course for Degree Curricular Plan - Edit Execution Course: --- Labels, nav buttons, more information; --- Associate, Dissociate; --- Move Announcements, Separation (already on production), Delete - Professorship deletion restrictions more informative. ---- (revealed by ExecutionCourseMerge)